# airlock.chat

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  airlock.code-workspace  check_size.sh  prod.sh  rust-us.code-workspace  start.sh  start_prod.sh
.cargo/: config.toml
.github/workflows/: rust.yml  test.yml
client/: Cargo.toml
client/src/: canvas.rs  js_api.rs  lib.rs  network.rs
core/: Cargo.toml  build.rs
core/src/: game_state.rs  lib.rs  player.rs  protocol.rs  replay.rs  server.rs  tests.rs
server/: Cargo.toml
server/src/: dev.rs  main.rs  prod.rs  server.rs
src/: lib.rs
www/: game_handler.js  index.html  index.js  package-lock.json  package.json  pwa_manifest.json  replay_player.html  replay_player.js  serviceworker.js  webpack.config.js
