[package]
name = "client"
version = "0.1.0"
authors = ["Peter Burns <rictic@gmail.com>"]
edition = "2018"
description = "A simple deception game, as an exercise in learning rust."
repository = "https://github.com/rictic/rust-us"
license = "Apache and MIT dual license"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
instant = {version = "0.1.7", features = ["wasm-bindgen"] }
wasm-bindgen-futures = "0.4.18"
stringreader = "0.1.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.rust_us_core]
path = "../core"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'BinaryType',
  'Blob',
  'CanvasGradient',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'ErrorEvent',
  'FileReader',
  'Headers',
  'HtmlIFrameElement',
  'HtmlCanvasElement',
  'History',
  'Location',
  'MessageEvent',
  'Node',
  'ProgressEvent',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Storage',
  'TextMetrics',
  "Url",
  "UrlSearchParams",
  'WebSocket',
  'Window',
]
