[package]
name = "rust_us_core"
version = "0.1.0"
authors = ["Peter Burns <rictic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
