[package]
name = "server"
version = "0.1.0"
authors = ["Peter Burns <rictic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11.1"
tokio-tungstenite = "0.11.0"
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "stream", "time"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
futures = "0.3"
url = "2.0.0"
env_logger = "0.7"
